fix legend resize + alignment

--- a/packages/core/src/themes/styles-white.scss
+++ b/packages/core/src/themes/styles-white.scss
@@ -24,7 +24,6 @@ $gray_60: #6f6f6f;
     }
   }
   .legend-btn text {
-    fill: $gray_60;
-    stroke: $gray_60;
+	color: $gray_60;
   }
 }
